Fixed error for white space

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,5 +1,4 @@
 .configlayout {
-  background-color: blue;
   position: relative;
   z-index: -2;
 }
